--- a/templates/incentives.html
+++ b/templates/incentives.html
@@ -59,7 +59,7 @@
       </div>
       <div class="back">
         <div>
-          <p>An opportunity to get  advanced entrepreneurship bootcamp to help scaleup your startup.</p>
+          <p>An opportunity to get advanced entrepreneurship bootcamp to help scaleup your startup.</p>
         
         </div>
       </div></a><a class="card" href="#!">
@@ -78,7 +78,7 @@
       </div>
       <div class="back">
         <div>
-          <p style="font-size: smaller;"> Top finalist teams shall get the opportunity to get 3 months long pre incubation at TBI _BITS Pilani, Hyderabad and subsequently a pitching opportunity OPPORTUNITY TO FURTHER AVAIL INCUBATION SUPPORT ( THE PARTICULAR TEAMS SELECTED SHALL BE AT THE DISCRETION OF TBI-BITS Pilani Hyderabad.</p>
+          <p style="font-size: smaller;"> Top finalist teams shall get the opportunity to get 3 months long pre incubation at TBI _BITS Pilani, Hyderabad and subsequently a pitching opportunity to further avail incubation support ( the particular teams selected shall be at the discretion of TBI - BITS Pilani Hyderabad.</p>
         
         </div>
       </div></a><a class="card" href="#!">
@@ -87,7 +87,7 @@
       </div>
       <div class="back">
         <div>
-          <p>Credits of upto 1000USD to be awarded to the top participant</p>
+          <p>Credits of upto 1000$ to be awarded to the top participant</p>
          
         </div>
       </div></a><a class="card" href="#!">
@@ -96,7 +96,7 @@
       </div>
       <div class="back">
         <div>
-          <p>25% off on hyper accelerator program of StartupBay worth 1400$ to 2 of the top participants/p>
+          <p>25% off on hyper accelerator program of Startup Bay worth 1400 to 2 of the top participants</p>
         
         </div>
       </div></a><a class="card" href="#!">
@@ -115,10 +115,10 @@
         </div>
         <div class="back">
           <div>
-            <p>CASH PRIZE OF INR 3 LAKHS FOR THE WINNERS OF THE COMPETITION!
-              <br>Winner:1.5 Lakhs
-              <br>Runner-Up:1 Lakh
-              <bold>Second Runner-Up</bold>:0.5 Lakh
+            <p>Cash Prize of INR 3 LAKHS for the winners of the competition!!
+              <br>Winner: 1.5 Lakhs
+              <br>Runner-Up: 1 Lakh
+              <bold>Second Runner-Up</bold>: 0.5 Lakh
             </p>
           </div>
         </div></a>
@@ -128,7 +128,7 @@
         </div>
         <div class="back">
           <div>
-            <p>3 of the TOP TEAMS WILL receive a free mentorship session worth INR 15000 provided by Startup Xperts after the competition to continue their learning and growth</p>
+            <p>3 of the top teams will receive a free mentorship session worth INR 15000 provided by Startup Xperts after the competition to continue their learning and growth</p>
       
           </div>
         </div></a>
@@ -138,7 +138,7 @@
           </div>
           <div class="back">
             <div>
-              <p>GET An opoourtunity to network with Action plan’s excellent partner base spread across Asia, Europe and North America.
+              <p>Get an opportunity to network with Action plan’s excellent partner base spread across Asia, Europe and North America.
               </p>
       
             </div>
@@ -149,8 +149,7 @@
             </div>
             <div class="back">
               <div>
-                <p style="font-size: smaller;">TOP 3 TEAMS WILL GET AN OPPORTUNITY TO GET EXPERT GUIDANCE THROUGH A MENTORSHIP PROGRAM BY iB HUBS AND CONTINUE TO LEARN FURTHER AFTER THE CONCLUSION OF ACTION PLAN 2021-22
-                </p>
+                <p>Top 3 teams will get an opportunity to get expert guidance through a mentorship program by iB HUBS and continue to learn further after the conclusion of Action Plan 2021-22</p>
               </div>
             </div></a>
             <a class="card" href="#!">
@@ -159,7 +158,7 @@
               </div>
               <div class="back">
                 <div>
-                  <p>ACTION PLAN HAS A GREAT NETWORK OF INVESTORS ACROSS INDIA. GET A CHANCE TO PITCH IN FRONT OF TOP INVESTORS OF INDIA, AN OPPORTUNITY TO INTERACT WITH THEM AND GET SEED FUNDING.
+                  <p>Action Plan has a great network of investors across India. Get a chance to pitch in front of top investors of India, an opportunity to interact with them and get seed funding.
                   </p>
                 </div>
               </div></a>
@@ -169,7 +168,7 @@
                 </div>
                 <div class="back">
                   <div>
-                    <p>Action Plan is one of the best platforms to get your social startup featured in media. Startup with innovative ideas will get a popularity through Newspapers, Magazines, Websites, Radio, TV and Social Media.
+                    <p>Action Plan is one of the best platforms to get your social startup featured in media. Startup with innovative ideas will get popularity through newspapers, magazines, websites, radio, TV and social media.
                     </p>
                   </div>
                 </div></a>
@@ -189,7 +188,7 @@
                     </div>
                     <div class="back">
                       <div>
-                        <p style="font-size: 14px;">A-PLAN HAS THE WIDE DOMAIN OF INDIA’S BEST SOCIAL INCUBATORS. PARTICIPANTS WILL GET AN OPPORTUNITY OF GETTING PRE-INCUBATION, INCUBATION, COACHING AND DEVELOPING CONNECTIONS WITH BUSINESS EXPERTS. PARTICIPANTS WILL GET AN ENVIRONMENT TO TRANSLATE KNOWLEDGE AND INNOVATION INTO THE CREATION OF SUCCESSFUL ENTREPRENEURS.
+                        <p>Action Plan has a wide domain of India's best social incubators. Participants will get an opportunity of getting pre-incubation, incubation, coaching and developing connections with business experts. Participants will get an environment to translate knowledge and innovation into the creation of successful entrepreneurs.
                         </p>
                       </div>
                     </div></a>
@@ -199,7 +198,7 @@
                       </div>
                       <div class="back">
                         <div>
-                          <p style="font-size: 14px;">A WORKSHOP IS A PATH THAT INTRODUCES YOU TO THE EXPERIENCE OF BEING AN ENTREPRENEUR. IT PROVIDES A PLATFORM TO INTRODUCE ASPIRING INDIVIDUALS TO THE ENTREPRENEURIAL MINDSET AND DEVELOP CREATIVE PROBLEM FINDING AND SOLVING SKILLS REQUIRED IN THE FIELD OF ENTREPRENEURIAL BUSINESSES OR SOCIAL ENTERPRISES.
+                          <p>A workshop is a path that introduces you to the experience of being an entrepreneur. It provides a platform to introduce aspiring individuals to the entrepreneurial mindset and develop creative problem finding and solving skills required in the field of entrepreneurial businesses or social enterprises.
                           </p>
                         </div>
                       </div></a>
