--- a/templates/partners.html
+++ b/templates/partners.html
@@ -604,6 +604,17 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-c">
+            <div class="portfolio-wrap">
+              <img src="{% static 'assetsp/img/partners/Media Partners/blogpartner.png' %}" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4><a href="https://edtimes.in/">https://edtimes.in/</a></h4>
+                <p>Blog Partner</p>
+                <div class="portfolio-links">
+                  </div>
+              </div>
+            </div>
+          </div>
               <div class="col-lg-4 col-md-6 portfolio-item filter-c">
             <div class="portfolio-wrap">
               <img src="{% static 'assetsp/img/partners/Media Partners/CIO Review.jpg' %}" class="img-fluid" alt="">
