--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -300,7 +300,7 @@ risks involved, set out clear goals and provide a common framework & approach fo
 reaching a logical conclusion within the constraints of time, space & resources.
 </p>
                                   <p class="read-more">
-                                    <a href="#">Add Submission</a>
+                                    <a href="https://app.startuped.net/signup?utm_source=IITBombay&utm_medium=Competition&utm_campaign=ActionPlan">Add Submission</a>
                                   </p>
                                 </div>
                             </div>
