--- a/templates/access/login.html
+++ b/templates/access/login.html
@@ -21,29 +21,22 @@
 
 <body>
     {% block content %}
-    <nav class="navbar navbar-inverse" style="background-color: #2E373C;">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <img src="{% static 'logo.png' %}" class="img-fluid" alt="logo" width="10%" style="margin-bottom: 0px;">
-
-            </div>
-        </div>
-    </nav>
 
     <style>
         @import url("https://fonts.googleapis.com/css?family=Anaheim|Quattrocento+Sans:400,700");
         @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:300,400,600");
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
 
         body {
-            font-family: "Quattrocento Sans", sans-serif;
-            background: url("/static/fifth_bg.jpg") no-repeat center center fixed;
+            font-family: 'Roboto Condensed', sans-serif;
+            background: #fff;
+<!--            background: url("../../static/loginbg.gif") no-repeat center center fixed;-->
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
         }
         h2{
-            font-family: "Quattrocento Sans", sans-serif;
             font-size: 40px;
             font-weight: 900;
         }
@@ -59,20 +52,20 @@
             width:100%;
         }
         .registration-form {
-            padding: 100px 0;
+            padding: 200px 0;
         }
 
         .registration-form form {
             display:grid;
-            justify-content: center;
-            background-color: rgba(245, 245, 245, 0.4);
             max-width: 600px;
             margin: auto;
-            padding: 50px 70px;
-            border-radius: 10px;
-            /* border-top-left-radius: 30px;
-            border-top-right-radius: 30px; */
-            box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
+            padding: 21px 78px;
+            background: rgba( 33, 31, 94, 0.2 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 4.5px );
+-webkit-backdrop-filter: blur( 4.5px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
         }
 
 
@@ -95,7 +88,7 @@
             cursor: pointer;
             font-size: 18px;
             color: #fff;
-            /* font-family: "Poppins", "Arial", "Helvetica Neue", sans-serif; */
+
         }
 
         .btn--radius {
@@ -125,6 +118,11 @@
             background: #d2eff0;
         }
 
+        button, input {
+        width: 76%;
+        }
+
+
 
 
         @media (max-width: 576px) {
@@ -138,26 +136,51 @@
                 font-size: 30px;
                 line-height: 70px;
             }
+
+            button, input {
+            width: 70%;
+            }
+        }
+
+         @media (max-width: 380px) {
+
+            button, input {
+            width: 65%;
+            }
+
+            .registration-form  {
+                padding: 100px 0;
+            }
+        }
+         @media (max-width: 330px) {
+
+            button, input {
+            width: 60%;
+            }
+
+            .registration-form  {
+                padding: 100px 0;
+            }
         }
     </style>
     <div class="registration-form">
         <form method="POST" action="" novalidate>
-            <h2>LOGIN</h2>
+            <h2 style="text-align: center">LOG IN</h2>
             {% csrf_token %}
             <div class="form-group">
-                <div class="input-label">Username</div>
+                <div class="input-label" style="text-align: right; clear: both; float: left; padding-right: 1rem;">Username:</div>
                 <div class="input-content">{{ form.username }}</div>
             </div>
 
             <div class="form-group">
-                <div class="input-label">Password</div>
+                <div class="input-label" style="text-align: right; clear: both; float: left; padding-right: 1rem;">Password:</div>
                 <div class="input-content">{{ form.password }}</div>
 
 
             </div>
             <div class="form-group m-0">
                 <div class="p-t-15">
-                    <button class="btn btn--radius-2 btn--blue" type="submit">Login</button>
+                    <button class="btn btn--radius-2 btn--blue" style="width: 100%" type="submit">Log In</button>
                 </div>
             </div>
             <!-- {{ form.as_p }} -->
@@ -170,26 +193,6 @@
 
 
 </body>
-
-<footer id="footer" class="bg-one" style="color: #fff;">
-    <div class="container">
-        <div class="row wow fadeInUp" data-wow-duration="500ms">
-            <div class="col-lg-12">
-
-                <div class="copyright text-center">
-                    <div class="rights">
-                        <p>&copy 2020 ABHYUDAY, IIT BOMBAY, ALL RIGHTS RESERVED</p>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
-
-    </div>
-
-</footer>
 
 {% endblock content %}
 
