--- a/templates/access/signup.html
+++ b/templates/access/signup.html
@@ -20,16 +20,9 @@
 
 <body>
     {% block content %}
-    <nav class="navbar navbar-inverse" style="background-color: #2E373C;">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <img src="{% static 'logo.png' %}" class="img-fluid" alt="logo" width="10%" style="margin-bottom: 0px;">
-            </div>
-    </nav>
-
     <div class="registration-form">
         <form method="POST" action="" novalidate>
-            <h1>Team Update Form</h1>
+            <h1 style="text-align: center;">Team Registration</h1>
             <div class="form-group">
                 {% csrf_token %}
                 {{ form.as_p }}
@@ -44,10 +37,13 @@
     <style>
         @import url("https://fonts.googleapis.com/css?family=Anaheim|Quattrocento+Sans:400,700");
         @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:300,400,600");
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
+
 
         body {
-            font-family: "Quattrocento Sans", sans-serif;
-            background: url("/static/3.jpg") no-repeat center center fixed;
+            font-family: 'Roboto Condensed', sans-serif;
+            background: #fff;
+<!--            background: url("../../static/loginbg.gif") no-repeat center center fixed;-->
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -55,7 +51,7 @@
         }
 
         h2 {
-            font-family: "Quattrocento Sans", sans-serif;
+
             font-size: 40px;
             font-weight: 900;
         }
@@ -88,14 +84,16 @@
         .registration-form form {
             display: grid;
             justify-content: center;
-            background-color: rgba(245, 245, 245, 0.4);
+
             max-width: 600px;
             margin: auto;
             padding: 50px 70px;
-            border-radius: 10px;
-            /* border-top-left-radius: 30px;
-            border-top-right-radius: 30px; */
-            box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
+background: rgba( 33, 31, 94, 0.3 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 4.5px );
+-webkit-backdrop-filter: blur( 4.5px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
         }
 
 
@@ -118,7 +116,7 @@
             cursor: pointer;
             font-size: 18px;
             color: #fff;
-            /* font-family: "Poppins", "Arial", "Helvetica Neue", sans-serif; */
+            width: 100%;
         }
 
         .btn--radius {
@@ -165,26 +163,6 @@
     </style>
 
 </body>
-
-<footer id="footer" style="color: #fff;">
-    <div class="container">
-        <div class="row wow fadeInUp" data-wow-duration="500ms">
-            <div class="col-lg-12">
-                <!-- copyright -->
-                <div class="copyright text-center">
-                    <div class="rights">
-                        <p>&copy 2020 ABHYUDAY, IIT BOMBAY, ALL RIGHTS RESERVED</p>
-                    </div>
-
-                </div>
-                <!-- /copyright -->
-            </div>
-            <!-- end col lg 12 -->
-        </div>
-        <!-- end row -->
-    </div>
-    <!-- end container -->
-</footer>
 {% endblock content %}
 
 </html>
