Stage1-Submission Update

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,12 +15,15 @@
         <link rel="stylesheet" href="{% static 'dashboard/css/light-box.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://kit.fontawesome.com/b50c7a47f6.js" crossorigin="anonymous"></script>
+
         <!-- <link rel="stylesheet" href="css/all.css"> -->
         <link rel="stylesheet" href="{% static 'dashboard/css/templatemo-main.css' %}">
 
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 
+
         <script src="dashboard/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
 
         <!-- favicons -->
     <link rel="shortcut icon" href="{% static 'dashboard/img/favicon.png' %}" type="image/x-icon">
@@ -233,6 +236,14 @@
   }
   .blog-card.alt .details {
     padding-left: 25px;
+
+
+  }
+  .btn-Style {
+      align-self: center;
+      background: indianred;
+      color: white;
+
   }
 }
         </style>
@@ -300,7 +311,7 @@ risks involved, set out clear goals and provide a common framework & approach fo
 reaching a logical conclusion within the constraints of time, space & resources.
 </p>
                                   <p class="read-more">
-                                    <a href="https://app.startuped.net/signup?utm_source=IITBombay&utm_medium=Competition&utm_campaign=ActionPlan">Add Submission</a>
+                                      <button type="button" class="btn-Style" id="add-submission" data-toggle="modal" data-target="#stage1-submission">Add Submission</button>
                                   </p>
                                 </div>
                             </div>
@@ -381,7 +392,29 @@ reaching a logical conclusion within the constraints of time, space & resources.
             </p>
           </div>
         </div>
+    <div class="modal fade" tabindex="-1" role="dialog" id="stage1-submission">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
 
+      <div class="modal-header">
+        <h5 class="modal-title">Stage 1 Submission</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+<form method="POST" name='stage1-submission' action="{% url 'actionplan:dashboard' %}" enctype="multipart/form-data">
+{% csrf_token %}
+{{ form.as_p }}
+</div>
+      <div class="modal-footer">
+        <input type="submit" class="btn-Style" value="Upload"/>
+      </div>
+</form>
+
+    </div>
+  </div>
+</div>
     
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{% static 'dashboard/js/vendor/jquery-1.11.2.min.js' %}"><\/script>')</script>
@@ -432,5 +465,13 @@ reaching a logical conclusion within the constraints of time, space & resources.
         };
     }
     </script>
+<script type="text/javascript">
+$(document).ready(function() {
+$('#add-submission').modal('show');
+  $(function () {
+    $('[data-toggle="tooltip"]').tooltip()
+  })
+});
+</script>
 </body>
 </html>
