--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -248,7 +248,7 @@
                   <div class="col-md-9">
                       <h2>Home</h2>
                       <p><em>TEAM NAME -</em> {{user.team_name}}<br><em>TEAM ID - </em>{{user.username}}<br><em>SECTOR -</em> {{user.sectors_selection}}<br></p>
-                      <div class="main-btn"><a href="{% url 'actionplan:team-edit' %}">Update Details</a></div>
+                      <div class="fb-btn"><a href="{% url 'actionplan:team-edit' %}">Update Details</a></div>
                       <div class="fb-btn"><a href="{% url 'actionplan:logout' %}">Logout</a></div>
                   </div>
               </div>
