--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -432,7 +432,7 @@ reaching a logical conclusion within the constraints of time, space & resources.
     <script src="{% static 'dashboard/js/plugins.js' %}"></script>
     <script src="{% static 'dashboard/js/main.js' %}"></script>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
     $(document).ready(function() {
 
