--- a/templates/partners.html
+++ b/templates/partners.html
@@ -1114,7 +1114,7 @@
               <img src="{% static 'assetsp/img/partners/SocialMedia Partners/Arnab2_final.jpg' %}" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="https://www.crazyaboutstartups.com/">https://www.crazyaboutstartups.com/</a></h4>
-                <p>SOCIAL MEDIA PARTNER</p>
+                <p>DIGITAL MEDIA PARTNER</p>
                 <div class="portfolio-links">
                   </div>
               </div>
@@ -1126,7 +1126,7 @@
               <img src="{% static 'assetsp/img/partners/SocialMedia Partners/arnab 1_final.jpg' %}" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="https://www.bplanexperts.com">https://www.bplanexperts.com</a></h4>
-                <p>SOCIAL MEDIA PARTNER</p>
+                <p>MENTORING PARTNER</p>
                 <div class="portfolio-links">
                   </div>
               </div>
