--- a/templates/partners.html
+++ b/templates/partners.html
@@ -1035,7 +1035,7 @@
             <div class="portfolio-wrap">
               <img src="{% static 'assetsp/img/partners/other partners/casi-global-new-york.jpg' %}" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="http://www.casigroupinc.com/">http://www.casigroupinc.com/</a></h4>
+                <h4><a href="http://www.casigroupinc.com/">www.casi-india.com</a></h4>
                 <p>PROGRAM PARTNER</p>
                 <div class="portfolio-links">
                   </div>
