--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -251,7 +251,7 @@
 }
 
         </style>
-
+       {% include 'messages.html' %}
         
         <div class="slides">
           <div class="slide" id="1">
