--- a/templates/rulesfaq.html
+++ b/templates/rulesfaq.html
@@ -250,7 +250,7 @@
                     suggestions and feedbacks to help participants develop and
                     refine their model. Participants are not required to have a
                     mentor, although teams are strongly encouraged to take
-                    advantage of this opportunity. NOTE:- Mentors are there to
+                    advantage of this opportunity. <br>NOTE:- Mentors are there to
                     guide you not to give you solutions of your problems.
                 </p>
               </div>
