--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -264,11 +264,11 @@
                       <h2>Home</h2>
                       <p><em>TEAM NAME -</em> {{user.team_name}}<br><em>TEAM ID - </em>{{user.username}}<br><em>SECTOR -</em> {{user.sectors_selection}}<br></p>
                       <div class="fb-btn btnnewmain" style="margin-right: 5px;"><a style="padding: 8px 15px;
-	font-size: 13px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	color: #fff;
-	background: transparent;" onMouseOver="this.style.backgroundColor='#fff'; this.style.color='#292929'" onMouseOut="this.style.backgroundColor='transparent'; this.style.color='#fff'"
+        font-size: 13px;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        color: #fff;
+        background: transparent;" onMouseOver="this.style.backgroundColor='#fff'; this.style.color='#292929'" onMouseOut="this.style.backgroundColor='transparent'; this.style.color='#fff'"
 
     href="{% url 'actionplan:team-edit' %}">Update Details</a></div>
                       <div class="fb-btn"><a href="{% url 'actionplan:logout' %}">Logout</a></div>
@@ -304,9 +304,9 @@
                             <div class="blog-card">
                                 <div class="meta">
                                   <!-- <div class="photo" style="background-image: url(https://storage.googleapis.com/chydlx/codepen/blog-cards/image-2.jpg)"></div> -->
-                                  <div class="photo" style="background-image: url(../static/dashboard/img/stage1.png)"></div>
+                                  <div class="photo" style="background-image: url(../static/dashboard/img/lock.png)"></div>
                                   <ul class="details">
-                                    <li class="date">Closes on Nov. 06, 2021</li>
+                                    <li class="date" style="font-size: 1.2rem;">Submissions Closed</li>
                                   </ul>
                                 </div>
                                 <div class="description">
@@ -315,37 +315,47 @@
                                   font-weight: 700;">Stage 1</h1>
                                   <h2 style="font-size: 1.2rem;padding-bottom: 0;
                                   padding-top: 0.25rem;">Playbook Submission</h2>
-                                  <p style="  color: #a2a2a2;"> The purpose of this playbook is to help develop a deeper understanding of
-                                    the opportunities you are trying to explore. The playbook would help build the team's
-                                    layout, clear objectives for their project’s ideas, identify metrics for measurements and
-                                    risks involved, set out clear goals and provide a common framework & approach for
-                                    reaching a logical conclusion within the constraints of time, space & resources. Go through the manual below to see the questions.<br>
-                                    <a style="color: #f9a826;" href="{% static 'dashboard/PlaybookManual2021-22.pdf' %}" target= "_blank">Play Book Manual 2021-22</a>
-                                  </p>
-                                  <p class="read-more">
-                                      <button type="button" id="add-submission" data-toggle="modal" data-target="#stage1-submission">Add Submission</button>
-                                  </p>
+<!--                                  <p style="  color: #a2a2a2;"> The purpose of this playbook is to help develop a deeper understanding of-->
+<!--                                    the opportunities you are trying to explore. The playbook would help build the team's-->
+<!--                                    layout, clear objectives for their project’s ideas, identify metrics for measurements and-->
+<!--                                    risks involved, set out clear goals and provide a common framework & approach for-->
+<!--                                    reaching a logical conclusion within the constraints of time, space & resources. Go through the manual below to see the questions.<br>-->
+<!--                                    <a style="color: #f9a826;" href="{% static 'dashboard/PlaybookManual2021-22.pdf' %}" target= "_blank">Play Book Manual 2021-22</a>-->
+<!--                                  </p>-->
+<!--                                  <p class="read-more">-->
+<!--                                      <button type="button" id="add-submission" data-toggle="modal" data-target="#stage1-submission">Add Submission</button>-->
+<!--                                  </p>-->
                                 </div>
                             </div>
                             <div class="blog-card alt">
                                 <div class="meta">
-                                  <div class="photo" style="background-image: url(../static/dashboard/img/lock.png)"></div>
+                                  <div class="photo" style="background-image: url(../static/dashboard/img/stage1.png)"></div>
                                   <ul class="details">
-                                    <li class="date">Unlocks January 2022</li>
+                                    <li class="date" style="font-size: 1.2rem;">Closes on Dec. 19, 2021</li>
                                   </ul>
                                 </div>
                                 <div class="description">
                                     <h1 style="font-size: 24px;
                                     text-transform: uppercase;
                                     font-weight: 700;">Stage 2</h1>
-                                  <h2>Business Model Canvas Submission</h2>
+                                  <h2 style="font-size: 1.2rem;padding-bottom: 0;
+                                  padding-top: 0.25rem;">Business Model Canvas Submission</h2>
+                                    <p style="  color: #a2a2a2;">
+                                        The purpose of this Solution Design Handbook is to furnish frameworks to the participating teams to help them design solutions for the social problems by following a structured approach.
+                                        This document will serve as a submission for the second round. Teams can also take this document as a checklist for their work. Please adhere to the word limit mentioned in brackets for each part.
+                                        Click on the link below to reach the solution design handbook!<br>
+                                    <a style="color: #f9a826;" href="https://drive.google.com/file/d/1Z9ZtjNNF0s-9HJLBSqskIha4uwnU-8fM/view?usp=drivesdk" target= "_blank">Solution Design Handbook 2021-22</a>
+                                  </p>
+                                  <p class="read-more">
+                                      <button type="button" id="add-submission" data-toggle="modal" data-target="#stage1-submission">Add Submission</button>
+                                  </p>
                                 </div>
                             </div>
                             <div class="blog-card">
                                 <div class="meta">
                                   <div class="photo" style="background-image: url(../static/dashboard/img/lock2.png)"></div>
                                   <ul class="details">
-                                    <li class="date">During Social Fest 2021</li>
+                                    <li class="date" style="font-size: 1.2rem;">During Social Fest 2021</li>
                                   </ul>
                                 </div>
                                 <div class="description">
@@ -405,29 +415,30 @@
           </div>
         </div>
     <div class="modal fade" tabindex="-1" role="dialog" id="stage1-submission">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
 
-      <div class="modal-header">
-        <h5 class="modal-title">Stage 1 Submission</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-<form method="POST" name='stage1-submission' action="{% url 'actionplan:dashboard' %}" enctype="multipart/form-data" style="font-size: 1.2rem;">
-{% csrf_token %}
-{{ form.as_p }}
-</div>
-      <div class="modal-footer">
-        <input type="submit" style="padding: 5px 10px;
-    font-size: 1.1rem;
-    background: #fa5252;
-    color: #fff;
-    border: #fa5252;
-}" class="btn-Style" value="Upload"/>
-      </div>
-</form>
+              <div class="modal-header">
+                <h5 class="modal-title">Stage 2 Submission</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+            <div class="modal-body">
+
+            <form method="POST" name='stage1-submission' action="{% url 'actionplan:dashboard' %}" enctype="multipart/form-data" style="font-size: 1.2rem;">
+            {% csrf_token %}
+            {{ form.as_p }}
+            </div>
+                  <div class="modal-footer">
+                    <input type="submit" style="padding: 5px 10px;
+                font-size: 1.1rem;
+                background: #fa5252;
+                color: #fff;
+                border: #fa5252;
+            }" class="btn-Style" value="Upload"/>
+                  </div>
+            </form>
 
     </div>
   </div>
